--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,22 @@
   </head>
 
   <body>
+  <header class="row">
+    <div class="col-3">
+      LOGO
+    </div>
+    <div class="col-4">
+      Splurting out cheesy inspirational quotes since 2017
+    </div>
+    <div class="column-5">
+      <%= link_to 'Contribute', '#' %>
+      <%= link_to 'About', '#' %>
+    </div>
+  </header>
+
+  <br class="clear" />
+
     <%= yield %>
+    
   </body>
 </html>
