--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,30 @@
   <body>
   <header class="row">
     <div class="col-3">
-      LOGO
+      <div class="circle">
+        <br />
+        Inspiration
+        <br />
+        On
+        <br />
+        Demand
+      </div>
+
     </div>
-    <div class="col-4">
+    <div class="col-4 slogan">
       Splurting out cheesy inspirational quotes since 2017
     </div>
-    <div class="column-5">
+    <div class="column-5 links">
       <%= link_to 'Contribute', '#' %>
       <%= link_to 'About', '#' %>
     </div>
   </header>
 
+  <hr />
+
   <br class="clear" />
 
     <%= yield %>
-    
+
   </body>
 </html>
