--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,5 @@
+
+
 @import "bootstrap";
 
 .clear{
@@ -38,6 +40,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #E32214;
+  font-family: "cantarellboldoblique", cursive;
+  font-weight: bold;
 }
 
 header {
@@ -47,3 +51,18 @@ header {
 hr {
   clear: both;
 }
+
+h1 {
+  font-family: "cantarellboldoblique", cursive;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: "cantarellboldoblique", cursive;
+}
+
+
+
+
+
