--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -62,6 +62,18 @@ h2 {
   font-family: "cantarellboldoblique", cursive;
 }
 
+.next-quote {
+  color: #f84342;
+  font-family: "cantarellboldoblique", cursive;
+  font-size: 20px;
+}
+
+.footer-blurb {
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 10px;
+}
 
 
 
