--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,22 @@
 
   <br class="clear" />
 
+  <div class="container">
     <%= yield %>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <%= link_to "This isn't enough, I need more!", "#", class: 'next-quote' %>
+        </div>
+        <div class="col-6 footer-blurb">
+        Proudly built by Drew Moore, a student of The Firehose Project. For Sarah, Liam, and Kiba. 
+        </div>
+      </div>
+    </div>
+  </div>
 
   </body>
 </html>
