--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
   <header class="row">
     <div class="col-3">
+      <%= link_to root_path, class: 'logo' do %>
       <div class="circle">
         <br />
         Inspiration
@@ -19,13 +20,13 @@
         <br />
         Demand
       </div>
-
+      <% end %>
     </div>
     <div class="col-4 slogan">
       Splurting out cheesy inspirational quotes since 2017
     </div>
     <div class="column-5 links">
-      <%= link_to 'Contribute', '#' %>
+      <%= link_to 'Contribute', new_quote_path %>
       <%= link_to 'About', '#' %>
     </div>
   </header>
@@ -42,7 +43,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <%= link_to "This isn't enough, I need more!", "#", class: 'next-quote' %>
+          <%= link_to "This isn't enough, I need more!", root_path, class: 'next-quote' %>
         </div>
         <div class="col-6 footer-blurb">
         Proudly built by Drew Moore, a student of The Firehose Project. For Sarah, Liam, and Kiba. 
