--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
     <div class="col-4 slogan">
       Splurting out cheesy inspirational quotes since 2017
     </div>
-    <div class="column-5 links">
+    <div class="col-5 links">
       <%= link_to 'Contribute', new_quote_path %>
-      <%= link_to 'About', '#' %>
+      <%= link_to 'About', about_path %>
     </div>
   </header>
 
