--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,13 @@
       </div>
       <% end %>
     </div>
-    <div class="col-4 slogan">
+    <div class="col col-sm-4 hidden-xs-down slogan">
       Splurting out cheesy inspirational quotes since 2017
     </div>
-    <div class="col-5 links">
+    <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
        <!-- Button trigger modal -->
       <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+      &nbsp; &nbsp;
       <%= link_to 'About', about_path %>
     </div>
   </header>
@@ -46,8 +47,9 @@
           </div>
           <%= simple_form_for Quote.new do |f| %>
           <div class="modal-body">
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :saying, label: "What quote inspires you?", placeholder: "Do. Or do not. There is no try." %>
+              <br />
+              <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Yoda" %>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -74,10 +76,10 @@
   <div class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-sm-6">
           <%= link_to "This isn't enough, I need more!", root_path, class: 'next-quote' %>
         </div>
-        <div class="col-6 footer-blurb">
+        <div class="col-12 col-sm-6 footer-blurb">
         Proudly built by Drew Moore, a student of The Firehose Project. For Sarah, Liam, and Kiba. 
         </div>
       </div>
