fixed about page font

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -10,7 +10,7 @@
   </p>
 </div>
 
-<div class="row">
+<div class="row about">
   <div class="col-12 col-sm-4">
     <%= image_tag 'drew.jpg', class: 'img-fluid' %>
   </div>
