making sure app works

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -102,4 +102,24 @@ h2 span {
   background-color: #f84342;
 }
 
+.contact-box {
+  -moz-box-shadow: 2px 2px 4px 0 #d0d0d0;
+  -webkit-box-shadow: 2px 2px 4px 0 #d0d0d0;
+  box-shadow: 2px 2px 4px 0 #d0d0d0;
+  background: #FAC3BB;
+  border: 2px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-bottom: 80px;
+}
+
+h3 {
+  font-family: "cantarellboldoblique", cursive;
+}
+
+
+
+
+
+
+
 
