--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,8 @@
       <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
       &nbsp; &nbsp;
       <%= link_to 'About', about_path %>
+      &nbsp; &nbsp;
+      <%= link_to 'Contact Me', contact_me_path %>
     </div>
   </header>
 
